<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>qa.qcri.iyas.uima.pipeline</groupId>
	<artifactId>s3qa-uima-pipeline-core</artifactId>
	<name>S3QACoreFramework</name>
	<version>0.0.1-SNAPSHOT</version>
	
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	
	<build>
		<!-- <sourceDirectory>src</sourceDirectory> -->
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-javadoc-plugin</artifactId>
		        <version>2.10.3</version>
        		<configuration>
        		
				</configuration>
      		</plugin>
      		<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkCount>3</forkCount>
					<reuseForks>true</reuseForks>
					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	 
	<repositories>
		<repository>
            <id>ukp-oss</id>
            <url>http://zoidberg.ukp.informatik.tu-darmstadt.de/artifactory/public-releases/</url>
        </repository>
        <repository>
			<id>kelp_repo_release</id>
			<name>KeLP Stable Repository</name>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>false</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>fail</checksumPolicy>
			</snapshots>
			<url>http://sag.art.uniroma2.it:8081/artifactory/kelp-release/</url>
		</repository>
<!--
		<repository>
			<id>IYAS-ALT</id>
			<url>http://10.2.5.35:8081/artifactory/iyas-release/</url>
		</repository>
-->
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.apache.activemq</groupId>
			<artifactId>activemq-all</artifactId>
			<version>5.15.1</version>
		</dependency>
		<dependency>
		  <groupId>org.apache.uima</groupId>
		  <artifactId>uimafit-core</artifactId>
		  <version>2.3.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.uima</groupId>
			<artifactId>uimaj-core</artifactId>
			<version>2.9.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.uima</groupId>
		    <artifactId>uimaj-document-annotation</artifactId>
		    <version>2.9.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.uima</groupId>
		    <artifactId>uimaj-as-core</artifactId>
		    <version>2.9.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.uima</groupId>
		    <artifactId>uimaj-as-jms</artifactId>
		    <version>2.9.0</version>
		</dependency>
		<dependency>
		    <groupId>org.apache.uima</groupId>
		    <artifactId>uimaj-as-activemq</artifactId>
		    <version>2.9.0</version>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-core</artifactId>
		    <version>5.0.0.RELEASE</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework</groupId>
		    <artifactId>spring-beans</artifactId>
		    <version>5.0.0.RELEASE</version>
		</dependency>
		
		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.8.1</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
		    <groupId>commons-lang</groupId>
		    <artifactId>commons-lang</artifactId>
		    <version>2.6</version>
		</dependency>
		
		<dependency>
		    <groupId>org.jdom</groupId>
		    <artifactId>jdom2</artifactId>
		    <version>2.0.6</version>
		</dependency>
		
		<dependency>
		    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
		    <artifactId>de.tudarmstadt.ukp.dkpro.core.stanfordnlp-gpl</artifactId>
		    <version>1.9.0</version>
		</dependency>
		<dependency>
		    <groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
		    <artifactId>de.tudarmstadt.ukp.dkpro.core.opennlp-asl</artifactId>
		    <version>1.9.0</version>
		</dependency>
		
		<!-- https://mvnrepository.com/artifact/de.tudarmstadt.ukp.dkpro.core/de.tudarmstadt.ukp.dkpro.core.ngrams-asl -->
		<dependency>
    		<groupId>de.tudarmstadt.ukp.dkpro.core</groupId>
    		<artifactId>de.tudarmstadt.ukp.dkpro.core.ngrams-asl</artifactId>
    		<version>1.9.0</version>
		</dependency>
				
		<!-- Added for features.SimilarityFeatures -->
		<dependency> 
			<groupId>de.tudarmstadt.ukp.similarity.algorithms</groupId>
			<artifactId>de.tudarmstadt.ukp.similarity.algorithms.lexical-asl</artifactId>
			<version>1.0.1</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		
		<dependency>
			<groupId>it.uniroma2.sag.kelp</groupId>
			<artifactId>kelp-full</artifactId>
			<version>2.2.1</version>
		</dependency>
		
		<!-- Required by the TokenTree class -->
		<dependency>
			<groupId>org.maltparser</groupId>
			<artifactId>maltparser</artifactId>
			<version>1.7</version>
		</dependency>

		<!-- Introduced to use Alphabet class --> 
		<dependency>
			<groupId>cc.mallet</groupId>
			<artifactId>mallet</artifactId>
			<version>2.0.7-RC2</version>
		</dependency>
		
	</dependencies>
	
</project>
